fix: [PIE-1666]: display infinity icon and align with date from tooltip for xAxis lables (#6026)
* fix: past 60, 90 days and 1 year experience and group by according to time range

* fix: sonar issues

* fix: give fixed height to cards and make most active services card scrollable

* fix: change bar color to green in deployments section

* feat: add sort by Instances support

* fix: test case

* fix: display infinity icon, align xAxis labels and data in tooltip related to date

* fix: sonar issues by reducing complexity of component

* fix: reduce number of lines for componet to fix sonar issues for the same

--- a/src/modules/70-pipeline/components/LandingDashboardDeploymentsWidget/LandingDashboardDeploymentsWidget.module.scss
+++ b/src/modules/70-pipeline/components/LandingDashboardDeploymentsWidget/LandingDashboardDeploymentsWidget.module.scss
@@ -39,7 +39,7 @@
       margin-right: var(--spacing-medium);
       padding: var(--spacing-xlarge);
       width: 65%;
-      height: 325px;
+      height: 350px;
       .summaryCardsContainer {
         margin-left: 20px;
         display: flex;
@@ -89,7 +89,6 @@
               display: flex;
               align-items: center;
               letter-spacing: 0.2px;
-              color: var(--green-600);
             }
           }
         }
@@ -97,7 +96,7 @@
     }
     .mostActiveServicesContainer {
       width: 35%;
-      height: 325px;
+      height: 350px;
       overflow-y: scroll;
       padding: 0;
       .mostActiveServicesHeaderContainer {
@@ -143,4 +142,5 @@
 
 .apiErrorWidget {
   height: 100%;
+  width: 100% !important;
 }
